--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:netto@localhost:5432/escolaidiomas"
+DATABASE_URL="postgresql://root:password@localhost:5432/escola"
 NEXTAUTH_SECRET='fnbsjfbsjkdfhjidfhçsuioafghsuidfhçsdhçiodo*nZgue*$3^&DVVZnFFiY4UE^^2wxY'
 NEXTAUTH_URL=http://localhost:3000
